--- a/Entity Framework/DemoWebApp/EFDemoApp/EFDataAccessLibrary/EFDataAccessLibrary.csproj
+++ b/Entity Framework/DemoWebApp/EFDemoApp/EFDataAccessLibrary/EFDataAccessLibrary.csproj
@@ -8,4 +8,9 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.6" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DataAccess\" />
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
