--- a/Entity Framework/DemoWebApp/EFDemoApp/ApiTest/appsettings.json
+++ b/Entity Framework/DemoWebApp/EFDemoApp/ApiTest/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Data Source=kenneth;Initial Catalog=EFDemoDB;Integrated Security=True"
+    "Default": "Data Source=kenneth;Initial Catalog=EFDemoDBHerenciaDos;Integrated Security=True"
   }
 }
